--- a/styles/app.css
+++ b/styles/app.css
@@ -12,6 +12,7 @@ a {
     text-decoration: none;
 }
 
+/*Barra de navegación*/
 .navbar {
     background: black;
     width: 100%;
@@ -31,16 +32,50 @@ a {
     margin-right: 6px;
 }
 
-.main-container--slider{
-    background: lightblue;
-    height: 290px;
+
+/*Slider de peliculas principales*/
+.slider-movies {
+    /* height: 100%;
+    width: 100%;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    display: flex; 
+    scroll-snap-type: x proximity; */
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
 }
 
-.slider-movies {
-    height: 100%;
+.slider-items {
+    display: flex;
+    animation: cambio 20s infinite alternate linear;
+    width: 300%;
 }
 
 .slider-img {
-    height: 92%;
-    background-color: azure;
+    /* position: relative;
+    scroll-snap-align: center;*/
+    width: 100%; 
+    list-style: none;
+}
+
+.item-img {
+    width: 100%;
+    height: 100%;
+}
+
+
+/*Animación de slider*/
+@keyframes cambio {
+    0%{margin-left: 0;}
+    20%{margin-left: 0;}
+
+    25%{margin-left: -100%;}
+    45%{margin-left: -100%;}
+
+    50%{margin-left: -200%;}
+    70%{margin-left: -200%;}
+
+    75%{margin-left: -300%;}
+    100%{margin-left: -300%;}
 }
