--- a/styles/app.css
+++ b/styles/app.css
@@ -42,8 +42,12 @@ a {
     display: flex; 
     scroll-snap-type: x proximity; */
     width: 100%;
-    height: 300px;
+    height: 181px;
     overflow: hidden;
+}
+
+.slider-title{
+    color: white;
 }
 
 .slider-items {
@@ -55,7 +59,8 @@ a {
 .slider-img {
     /* position: relative;
     scroll-snap-align: center;*/
-    width: 100%; 
+    width: 350px; 
+    height: 100%;
     list-style: none;
 }
 
@@ -64,6 +69,15 @@ a {
     height: 100%;
 }
 
+.main-container--slider{
+    background: black;
+}
+
+/*Seccion de destacados*/
+.destacados-title{
+    text-align: center;
+    margin-top: 35px;
+}
 
 /*Animación de slider*/
 @keyframes cambio {
