--- a/styles/app.css
+++ b/styles/app.css
@@ -77,7 +77,7 @@ a {
 /*Seccion de destacados*/
 .destacados-title{
     text-align: center;
-    margin-top: 35px;
+    margin-top: 25px;
 } 
 
 .movie-container--slider {
@@ -93,9 +93,9 @@ a {
     scroll-snap-align: center;
     width: 90%;
     min-width: 190px;
-    max-width: 400px;
-    height: 350px;
-    margin: 50px 10px 0;
+    max-width: 420px;
+    height: 370px;
+    margin: 30px 10px 0;
     padding: 0 15px;
     background-color: var(--just-white);
     border-radius: 15px;
@@ -124,6 +124,43 @@ a {
     border-radius: 6px;
 }
 
+/*Seccion categorias*/
+.categorias-title {
+    text-align: center;
+    margin-top: 35px;
+    font-size: 1.5rem;
+}
+
+.buscar {
+    position: absolute;
+    padding: 5px;
+}
+
+.buscar input {
+    width: 0px;
+    height: 40px;
+    padding: 0 20px;
+    font-size: 1.8rem;
+    color: #000;
+    outline: 1px solid silver;
+    border-radius: 30px;
+    transition: all 0.6s ease;
+}
+
+.btn{
+    width: 55px;
+    height: 55px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #440080;
+    line-height: 55px;
+    text-align: center;
+    font-size: 1.8rem;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
 /*Animación de slider*/
 @keyframes cambio {
     0%{margin-left: 0;}
@@ -137,4 +174,12 @@ a {
 
     75%{margin-left: -300%;}
     100%{margin-left: -300%;}
+}
+
+/*Animacion bonton buscar*/
+.buscar:hover input {
+    width: 240px;
+}
+.buscar input:focus {
+    width: 240px;
 }
